--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,13 @@
 	</div>
 	<div id="app-3">
 		<p v-if="seen">现在你看到我了</p>
+		<p v-show="haha">静静的</p>
 	</div>
 	<div id="app-4">
 		<ol>
-			<li v-for="todo in todos">
-				{{ todo.text }}
+		<!-- <li v-for="(todo, index) in todos">  -->
+		<li v-for="(todo, index) of todos"> 
+				{{index}}--{{ todo.text }}
 			</li>
 		</ol>
 	</div>
@@ -35,7 +37,19 @@
 		<ol>
 			<todo-item v-for="item in groceryList" v-bind:todo="item"></todo-item>
 		</ol>
+		<ul>
+			<li v-for="(value, key) in object">
+				{{ key }}--{{ value }}
+			</li>
+		</ul>
+		<span v-for="n in even(numbers)">{{n}}</span>
 	</div>
+	<div id="example">
+		<p>Original message: "{{ message }} haha {{ now }}"</p>
+		<p>Computed reversed message: "{{ reversedMessage() }}"</p>
+	</div>
+	<div id="demo">{{ fullName }}</div>
+	<div v-if="Math.random() > 0.5">Now you see me</div><div v-else>Now you don't</div>
 	<script src="../js/vue.js"></script>
 	<script>
 		var app = new Vue({
@@ -53,7 +67,8 @@
 		var app3 = new Vue({
 			el: '#app-3',
 			data: {
-				seen: true
+				seen: true,
+				haha: false
 			}
 		});
 		var app4 = new Vue({
@@ -94,7 +109,72 @@
 					{ text: '蔬菜'},
 					{ text: '奶酪'},
 					{ text: '随便其他什么人吃的东西'}
-				]
+				],
+				object: {
+					'firstname': "shen",
+					'lastname': "xiaoqing",
+					'age': 21
+				},
+				numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+			},
+			methods: {
+				even: function (numbers) {
+					return numbers.filter(function(number) {
+						return number % 2 === 0
+					})
+				}
+			}
+		});
+		var vm = new Vue({
+			el: "#example",
+			data: {
+				message: 'Hello'
+			},
+			computed: {
+				reversedMessage: function() {
+					return this.message.split('').reverse().join('')
+				},
+				now: function() {
+					return Date.now()
+				}
+			},
+			methods: {
+				reversedMessage: function() {
+					return this.message.split('').reverse().join('')
+				}
+			}
+		});
+		var demo = new Vue({
+			el: '#demo',
+			data: {
+				firstName: 'Foo',
+				lastName: 'Bar',
+				fullName: 'Foo Bar'
+			},
+			// watch: {
+			// 	firstName: function (val) {
+			// 		this.fullName = val + ' ' + this.lastName
+			// 	},
+			// 	lastName: function (val) {
+			// 		this.fullName = this.firstName + ' ' + val
+			// 	}
+			// }
+			computed: {
+				// fullName : function () {
+				// 	return this.firstName + ' ' + this.lastName
+				// }
+				fullName: {
+				    // getter
+				    get: function () {
+				      return this.firstName + ' ' + this.lastName
+				    },
+				    // setter
+				    set: function (newValue) {
+				      var names = newValue.split(' ')
+				      this.firstName = names[0]
+				      this.lastName = names[names.length - 1]
+				    }
+				}
 			}
 		});
 	</script>
