--- a/html/event.html
+++ b/html/event.html
@@ -8,17 +8,47 @@
 	<div id="example-1">
 		<button v-on:click="counter += 1">增加 1</button>
 		<p>这个按钮被点击了{{ counter }}次。</p>
+		<input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
+		<label for="jack">Jack</label>
+		<input type="checkbox" id="john" value="John" v-model="checkedNames">
+		<label for="john">John</label>
+		<input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
+		<label for="mike">Mike</label>
+		<br>
+		<span>Checked names: {{ checkedNames }}</span>
 	</div>
 	<div id="example-2">
 		<button v-on:click="greet">Greet</button>
 		<button v-on:click="warn('Form cannot be submitted yets.', $event)">Submit</button>
+	</div>
+	<br>
+	<br>
+	<div id="example-3">
+		<select v-model="delected">
+			<option v-bind:value="{ number: 123 }">123</option>
+		</select>{{ msg }}
+		<input v-model.trim='msg'>
+	</div>
+
+	<br>
+	<div id="example-5" class="demo">
+		<select v-model="selected">
+			<option v-for="option in options" v-bind:value="option.value">{{ option.text }}</option>
+		</select>
+		<span>Selected: {{ selected }}</span>
+	</div>
+	<div id="example-6">
+	  <simple-counter></simple-counter>
+	  <simple-counter></simple-counter>
+	  <simple-counter></simple-counter>
 	</div>
 	<script type="text/javascript" src="../js/vue.js"></script>
 	<script>
 		var example1 = new Vue({
 			el: '#example-1',
 			data: {
-				counter: 0
+				counter: 0,
+				checkedNames: []
 			}
 		});
 		var example2 = new Vue({
@@ -37,6 +67,38 @@
 				}
 			}
 		});
+		var example3 = new Vue({
+			el: "#example-3",
+			data: {
+				'delected': 'shenhaha',
+				'msg': ''
+			}
+		});
+		var example5 = new Vue({
+			el: '#example-5',
+			data: {
+				selected: 'A',
+				options: [
+					{ text: 'One', value: 'A'},
+					{ text: 'Two', value: 'B'},
+					{ text: 'Three', value: 'C'}
+				]
+			}
+		});
+var data = { counter: 0 }
+Vue.component('simple-counter', {
+  template: '<button v-on:click="counter += 1">{{ counter }}</button>',
+  // 技术上 data 的确是一个函数了，因此 Vue 不会警告，
+  // 但是我们返回给每个组件的实例的却引用了同一个data对象
+  data: function () {
+    return {
+    	counter: 0
+    }
+  }
+})
+var example6 = new Vue({
+  el: '#example-6'
+})
 	</script>
 </body>
 </html>
