--- a/html/css.html
+++ b/html/css.html
@@ -5,32 +5,21 @@
 	<title>css</title>
 </head>
 <style>
-	.first {
-		width: 300px;
-		height: 300px;
-		font-size: 30px;
-		/*line-height: 150%;*/
-		/*line-height: 1.5;*/
-		border: 1px solid #333;
-		white-space: nowrap;
-		overflow: hidden;
-	}
-	.first> div {
-		/*vertical-align: 200px;*/
-		margin-bottom: -200px;
-	}
-	ul{text-align:justify;}
-	li{display:inline-block;}
+    .comment_inner{
+	    width: 200px;
+	    word-break: break-all;
+	    text-overflow: ellipsis;
+	    display: -webkit-box; /** 对象作为伸缩盒子模型显示 **/
+	    -webkit-box-orient: vertical; /** 设置或检索伸缩盒对象的子元素的排列方式 **/
+	    -webkit-line-clamp: 3; /** 显示的行数 **/
+	    overflow: hidden;  /** 隐藏超出的内容 **/
+    }
 </style>
 <body>
-	<div class="first"><div>只缘身在此山中，这几天不知道为啥好容易瞌睡啊！</div></div>
-	<ul>
-		<li>哈哈哈</li>
-		<li>哈哈哈</li>
-		<li>哈哈哈</li>
-		<li>哈哈哈</li>
-		<li>哈哈哈</li>
-	</ul>
-	<div style="background: #ccc;"><img style="vertical-align: middle;" src="../images/1.jpg"><span style="background: #fff;">ahh<span></div>
+<div>
+   <div class="comment_inner">
+	word-break 属性规定自动换行的处理方法。normal(使用浏览器默认的换行规则。),break-all(允许在单词内换行。),keep-all(只能在半角空格或连字符处换行。)
+   </div>
+</div>
 </body>
 </html>
